[gd_scene load_steps=7 format=2]

[ext_resource path="res://choose_level.gd" type="Script" id=1]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="ChooseLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -277.0
margin_top = 140.0
margin_right = 277.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.501961, 0.027451, 1 )
custom_constants/shadow_offset_x = -4
text = "CHOOSE YOUR LEVEL"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -347.0
margin_top = 430.0
margin_right = 360.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.501961, 0.027451, 1 )
custom_constants/shadow_offset_x = -4
text = "More Levels Coming Soon!.."
align = 1
valign = 1

[node name="Level1Button" type="Button" parent="."]
margin_left = 219.5
margin_top = 312.5
margin_right = 317.5
margin_bottom = 346.5
custom_fonts/font = SubResource( 2 )
text = "Level 1"

[node name="Level2Button" type="Button" parent="."]
margin_left = 369.5
margin_top = 310.5
margin_right = 467.5
margin_bottom = 344.5
custom_fonts/font = SubResource( 2 )
text = "Level 2"

[node name="Level3Button" type="Button" parent="."]
margin_left = 519.5
margin_top = 310.5
margin_right = 617.5
margin_bottom = 344.5
custom_fonts/font = SubResource( 2 )
text = "Level 3"

[node name="Level4Button" type="Button" parent="."]
margin_left = 669.5
margin_top = 310.5
margin_right = 769.5
margin_bottom = 344.5
custom_fonts/font = SubResource( 2 )
text = "Level 4"

[node name="Level5Button" type="Button" parent="."]
margin_left = 819.5
margin_top = 310.5
margin_right = 918.5
margin_bottom = 344.5
custom_fonts/font = SubResource( 2 )
text = "Level 5"

[node name="Level6Button" type="Button" parent="."]
margin_left = 969.5
margin_top = 310.5
margin_right = 1067.5
margin_bottom = 344.5
custom_fonts/font = SubResource( 2 )
text = "Level 6"

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -74.0
margin_right = 158.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 2 )
text = "Back To Title"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 361 )
current = true

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
[connection signal="pressed" from="Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_Level3Button_pressed"]
[connection signal="pressed" from="Level4Button" to="." method="_on_Level4Button_pressed"]
[connection signal="pressed" from="Level5Button" to="." method="_on_Level5Button_pressed"]
[connection signal="pressed" from="Level6Button" to="." method="_on_Level6Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
